

syntax = "proto3";

import "wrappers.proto";

package taxi.server;

option java_multiple_files = true;
option java_package = "kr.co.vcnc.gryphon.protocol.server";
option java_outer_classname = "UserSubmitNpsRecordProto";

message UserSubmitNpsRecordParams {
  int32 score = 1;
  StringValue reason = 2;
}

message UserSubmitNpsRecordResult {
}
